Small bug fix in hamburger button on mobile screens

--- a/public/main.css
+++ b/public/main.css
@@ -1297,6 +1297,7 @@ header {
 
     .mobile-menu {
         width: 100vw;
+        right: -100vw;
     }
 
     .container-hero {
